# heat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  check.txt  clip.txt  clippy.txt  coverage.sh  crates.js  index.html  index.md  report.html  report.md  results.csv  search-index.js  settings.html  source-files.js
.github/workflows/: build.yaml  build.yml  coverage.yaml  coverage.yml  docs.yaml  style.yaml  test_deploy_doc.yml  tests.yaml
building_state_macro/: all.html  derive.GroupInputOutput.html  derive.ModelGetterSetter.html  derive.SimpleInputOutput.html  derive.SimpleObjectBehaviour.html  derive.SimulationStateBehaviour.html  index.html  sidebar-items.js
calendar/: all.html  index.html  sidebar-items.js
calendar/date/: index.html  sidebar-items.js  struct.Date.html
calendar/date_factory/: index.html  sidebar-items.js  struct.DateFactory.html
communication_protocols/: all.html  index.html  sidebar-items.js
communication_protocols/error_handling/: index.html  sidebar-items.js  trait.ErrorHandling.html
communication_protocols/simulation_model/: index.html  sidebar-items.js  trait.SimulationModel.html
convection/: all.html  fn.calc_convection_coefficients.html  fn.calc_convection_coefficients_for_fenestration.html  index.html  sidebar-items.js
coverage/: index.html
coverage/src/: construction.rs.html  heating_cooling.rs.html  index.html  lib.rs.html  model.rs.html  surface.rs.html  zone.rs.html
docs/: index.html
docs/rustdoc/: .rustc_info.json  .rustdoc_fingerprint.json
docs/validation/: walls.html
gas_properties/: all.html  index.html  sidebar-items.js
gas_properties/air/: fn.density.html  fn.specific_heat.html  index.html  sidebar-items.js
geometry3d/: all.html  index.html  macro.gamma.html  sidebar-items.js
geometry3d/cylinder3d/: index.html  struct.Cylinder3D.html
geometry3d/disk3d/: index.html  struct.Disk3D.html
geometry3d/distant_source3d/: index.html  struct.DistantSource3D.html
geometry3d/intersect_trait/: enum.SurfaceSide.html  index.html  struct.IntersectionInfo.html  trait.Intersect.html
geometry3d/loop3d/: index.html  struct.Loop3D.html
geometry3d/plane3d/: index.html  struct.Plane3D.html
geometry3d/point3d/: index.html  struct.Point3D.html
geometry3d/polygon3d/: index.html  struct.Polygon3D.html
geometry3d/ray3d/: index.html  struct.Ray3D.html
geometry3d/round_error/: index.html  sidebar-items.js  struct.ApproxFloat.html
geometry3d/segment3d/: index.html  struct.Segment3D.html
geometry3d/sphere3d/: index.html  struct.Sphere3D.html
geometry3d/transform/: index.html  sidebar-items.js  struct.Transform.html
geometry3d/triangle3d/: enum.PointInTriangle.html  fn.intersect_triangle.html  index.html  sidebar-items.js  struct.Triangle3D.html
geometry3d/triangulation3d/: fn.is_convex.html  index.html  sidebar-items.js  struct.Triangulation3D.html
geometry3d/vector3d/: index.html  struct.Vector3D.html
implementors/weather/: trait.Weather.js
matrix/: all.html  index.html  struct.Matrix.html
rustdoc/: .rustc_info.json  .rustdoc_fingerprint.json
rustdoc/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
schedule/: all.html  index.html  sidebar-items.js
schedule/constant/: index.html  sidebar-items.js  struct.ScheduleConstant.html
simple_model/: all.html  index.html  sidebar-items.js
src/: cavity.rs  construction.rs  convection.rs  discretization.rs  environment.rs  gas.rs  glazing.rs  heating_cooling.rs  iso15099.rs  lib.rs  luminaire.rs  model.rs  surface.rs  surface_solver.rs  surface_trait.rs  zone.rs
tests/: sim_eplus.sh  validate.rs  validate_convection.rs  validate_wall_heat_transfer.rs
thermal/: all.html  constant.PI.html  constant.SIGMA.html  index.html  sidebar-items.js  type.Float.html
validation/: convection_coefficients.html  walls.html
weather/: all.html  index.html  sidebar-items.js  trait.Weather.html
(+2163 files in other folders)
