[package]
name = "thermal"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"
license = "MIT"



[dependencies]
simple_model = {git = "https://github.com/SIMPLE-BuildingSimulation/simple_model.git"}
# simple_model = {path = "../simple_model"}
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
weather = { git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
communication_protocols = { git = "https://github.com/SIMPLE-BuildingSimulation/communication_protocols.git" }
matrix = {git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git"}
convection = {git = "https://github.com/SIMPLE-BuildingSimulation/convection.git"}
gas_properties = {git = "https://github.com/SIMPLE-BuildingSimulation/gas_properties.git"}

[dev-dependencies]
schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
simple_test_models = {git="https://github.com/SIMPLE-BuildingSimulation/simple_test_models.git"}

# Check https://stackoverflow.com/questions/53127722/how-can-i-activate-features-in-all-my-crates

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./katex.html",
]