[package]
name = "heat"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2021"
license = "MIT"



[dependencies]
# simple_model = {git = "https://github.com/SIMPLE-BuildingSimulation/simple_model.git", branch="serde"}
simple_model = {path = "../simple_model"}
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
weather = { git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
# communication_protocols = { git = "https://github.com/SIMPLE-BuildingSimulation/communication_protocols.git" }
communication_protocols = {path = "../communication_protocols"}
matrix = {git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git"}
polynomial = {git = "https://github.com/SIMPLE-BuildingSimulation/polynomial.git"}

[dev-dependencies]
validate = {git="https://github.com/SIMPLE-BuildingSimulation/validate.git"}
schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
# simple_test_models = {git="https://github.com/SIMPLE-BuildingSimulation/simple_test_models.git"}
simple_test_models = {path="../simple_test_models"}

# Check https://stackoverflow.com/questions/53127722/how-can-i-activate-features-in-all-my-crates

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "./katex.html",
]

[features]
default = []
parallel=[]
float = [
    "simple_model/float",  
    "matrix/float",  
    "weather/float", 
    "calendar/float", 
    "geometry3d/float", 
    "polynomial/float"
]